fix(sidebar): adjust z-index for sidebar component

--- a/components/sidebar/DriveSidebar.module.scss
+++ b/components/sidebar/DriveSidebar.module.scss
@@ -2,6 +2,7 @@
 
 .sidebar {
   border-right: 1px solid v(sidebar-border);
+  z-index: 4;
 }
 
 .sidebarHeader {
